# 3d_lab

./: README.md
1st_ex/: arr.h  hash_table.h  list.h  main.cpp  queue.h  stack.h  tree.h
2nd_ex/hash_table/: hash_table.go
C++/: CMakeLists.txt  script.sh
C++/include/: arr.h  hash_table.h  list.h  queue.h  stack.h  tree.h
C++/src/: arr.cpp  hash_table.cpp  list.cpp  main.cpp  queue.cpp  queue.h  stack.cpp  timer.h  tree.cpp
C++/tests/: test_arr.cpp  test_hash_table.cpp  test_list.cpp  test_queue.cpp  test_stack.cpp  test_tree.cpp
Go/: go.mod  main.go  script.sh
Go/hash_table/: hash_table.go  hash_table_test.go
Go/hash_table_test/: hash_table_test.go
Go/serialization/: serialization.go
